--- a/WebApplicationReport.csproj
+++ b/WebApplicationReport.csproj
@@ -155,6 +155,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Paginas\StyleSheet.css" />
     <Content Include="Paginas\VistaReporteForm.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
